# stacc

./: .gitignore  README.md  environment.yaml  export_model.py  setup.cfg  setup.py
.github/workflows/: build_docs.yaml  run_tests.yaml
doc/: documentation.md
napari-example-data/annotations/: image1.csv  image2.csv  image3.csv  image4.csv  image5.csv
scripts/: example_napari_training.py  example_stacc_training.py  inference.py  run_stacc_training.py  stacc_training.py  test_config.json  train_from_napari_data.py  visualize_centroids_from_csv.py  visualize_csv_restults.py
scripts/model_export/: export_colony_model.py  export_custom_model.py  export_livecell_model.py
stacc/: __init__.py  dataset.py  evaluation.py  napari.yaml  prediction.py  unet_2d.py  util.py
stacc/stacc_plugin/: counting.py
stacc/training/: __init__.py  dataset.py  napari_training.py  stacc_training.py  util.py  utils.py
test/: test_prediction.py
test/training/: test_stacc_training.py
training/: dataset.py  run_stacc_training.py  test_config.json  test_stacc.json  training.py  utils.py
