[metadata]
name = stacc
version = attr: stacc.__version__
description = Automated counting for biomedical images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/computational-cell-analytics/stacc
author = Julia Jeremias, Constantin Pape
author_email = yourname@example.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/computational-cell-analytics/stacc/issues
    Documentation = https://github.com/computational-cell-analytics/stacc
    Source Code = https://github.com/computational-cell-analytics/stacc
    User Support = https://github.com/computational-cell-analytics/stacc/issues

[options]
packages = find:
python_requires = >=3.10
include_package_data = True
package_dir =
    = .

[options.packages.find]
where = .

# tell napari where to find to your manifest
[options.entry_points]
napari.manifest =
    stacc = stacc:napari.yaml

console_scripts =
   stacc.counting = stacc.prediction:main

# make sure it gets included in your package
[options.package_data]
* = *.yaml
